--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
-  "name": "reactjs-starter-template",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.28.0",
-    "axios": "^1.6.7",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.356.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6"
-  }
+	"name": "reactjs-starter-template",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"format": "prettier . --write",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^5.28.0",
+		"@tanstack/react-router": "^1.19.12",
+		"antd": "^5.15.3",
+		"axios": "^1.6.7",
+		"clsx": "^2.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"localforage": "^1.10.0",
+		"lucide-react": "^0.356.0",
+		"match-sorter": "^6.3.4",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.22.3",
+		"sort-by": "^1.2.0",
+		"tailwind-merge": "^2.2.1",
+		"zod": "^3.22.4",
+		"zustand": "^4.5.2"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.64",
+		"@types/react-dom": "^18.2.21",
+		"@typescript-eslint/eslint-plugin": "^7.1.1",
+		"@typescript-eslint/parser": "^7.1.1",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"autoprefixer": "^10.4.18",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"husky": "^9.0.11",
+		"postcss": "^8.4.35",
+		"prettier": "3.2.5",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.2.2",
+		"vite": "^5.1.6"
+	}
 }
