--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
 		"localforage": "^1.10.0",
 		"lucide-react": "^0.356.0",
 		"match-sorter": "^6.3.4",
+		"npm": "^10.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet-async": "^2.0.4",
 		"react-router-dom": "^6.22.3",
 		"sort-by": "^1.2.0",
 		"tailwind-merge": "^2.2.1",
