--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.28.0",
+		"@tanstack/react-query": "^5.28.8",
 		"@tanstack/react-router": "^1.19.12",
 		"antd": "^5.15.3",
 		"axios": "^1.6.7",
@@ -24,6 +24,7 @@
 		"npm": "^10.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.13",
 		"react-helmet-async": "^2.0.4",
 		"react-router-dom": "^6.22.3",
 		"sort-by": "^1.2.0",
@@ -32,6 +33,8 @@
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@tanstack/react-query-devtools": "^5.28.8",
+		"@types/node": "^20.11.30",
 		"@types/react": "^18.2.64",
 		"@types/react-dom": "^18.2.21",
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
